<resources>
    <string name="app_name">Travel Planner App</string>
    <string name="logIn">Log in</string>
    <string name="signUp">Sign up</string>
    <string name="logInTitle">Login</string>
    <string name="registerTitle">Register</string>
    <string name="emailHint">E-mail</string>
    <string name="nameHint">Name</string>
    <string name="passwordHint">Password</string>
    <string name="tv_dontHaveAnAccount">Don\'t have an account?</string>
    <string name="tv_register">Register</string>
    <string name="userImage">User\'s image</string>
    <string name="tv_alreadyHaveAnAccount">Already have an account?</string>
    <string name="tv_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="findYour">Find Your</string>
    <string name="destinations">Destination</string>
    <string name="searchHint">Search Destinations</string>
    <string name="topDestinations">Top Destinations</string>
    <string name="destinationName">Destination Name</string>
    <string name="destinationCountry">Destination Country</string>
    <string name="destinationPrice">Destination Price</string>
    <string name="destinationImage">Picture of a destination</string>
    <string name="arrow">Clickable arrow</string>
    <string name="price">Price:</string>
    <string name="destinationDate">Destination Date</string>
    <string name="destinationLocation">Destination Location</string>
    <string name="photographs">Photographs</string>
    <string name="about">About</string>
    <string name="destinationDescription">Destination Description Destination Description Destination Description Destination Description Destination Description Destination Description
    Destination Description Destination Description Destination Description</string>
    <string name="plan">Plan</string>
    <string name="menu_destinations">Destinations</string>
    <string name="menu_plans">Plans</string>
    <string name="planDateHint">Enter planned date for your trip</string>
    <string name="planNumberOfTravelersHint">Enter numeric number of travelers</string>
    <string name="planNoteHint">Enter some notes for your trip</string>
    <string name="addPlan">Add</string>
    <string name="cancelPlan">Cancel</string>
    <string name="plannedDestination">Planned destination to Destination Name</string>
    <string name="planDate">Plan Date</string>
    <string name="planPrice">Plan Price</string>
    <string name="planNote">Plan Note Plan Note Plan Note Plan Note Plan Note Plan Note Plan Note Plan Note</string>
    <string name="yourPlans">Your Plans</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="updatePlan">Update</string>
</resources>