<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/card_background">

    <ImageView
        android:id="@+id/iv_destination"
        android:layout_width="@dimen/destinationImageWidthAndHeight"
        android:layout_height="@dimen/destinationImageWidthAndHeight"
        android:adjustViewBounds="true"
        android:contentDescription="@string/destinationImage"
        android:padding="@dimen/tv_padding"
        android:scaleType="fitXY"
        android:src="@drawable/caribbean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_destinationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/destinationNameMarginStart"
        android:layout_marginTop="@dimen/destinationNameMarginTop"
        android:text="@string/destinationName"
        android:textColor="@color/black"
        android:textSize="@dimen/destinationNameTextSize"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_destination"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_destinationCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/destinationCountryPriceDateLocationDescriptionMarginTop"
        android:text="@string/destinationCountry"
        android:textColor="@color/black"
        android:textSize="@dimen/destinationCountryAndPriceTextSize"
        app:layout_constraintStart_toStartOf="@+id/tv_destinationName"
        app:layout_constraintTop_toBottomOf="@+id/tv_destinationName" />

    <TextView
        android:id="@+id/tv_destinationPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/destinationCountryPriceDateLocationDescriptionMarginTop"
        android:drawablePadding="@dimen/destinationDrawablePadding"
        android:text="@string/destinationPrice"
        android:textColor="@color/black"
        android:textSize="@dimen/destinationCountryAndPriceTextSize"
        app:layout_constraintStart_toStartOf="@+id/tv_destinationCountry"
        app:layout_constraintTop_toBottomOf="@+id/tv_destinationCountry" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="@dimen/arrowIconWidth"
        android:layout_height="@dimen/destinationImageWidthAndHeight"
        android:contentDescription="@string/arrow"
        android:src="@drawable/arrow_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

    
